добавлены интерфейсы для бд; дешифровка телефона
