# v3/handlers/admin.go
@@ -1,6 +1,8 @@
 package handlers
 
 import (
+	"apiP/v3/config"
+	"apiP/v3/security"
 	"database/sql"
 	"github.com/gin-gonic/gin"
 	"log"
@@ -8,6 +10,11 @@ import (
 	"strconv"
 	"time"
 )
+
+type UpdateUserRequest struct {
+	Username string `json:"username" example:"new_username"`
+	Role     string `json:"role" example:"admin"`
+}
 
 type SuccessResponse struct {
 	Data         interface{} `json:"data"` // Используйте конкретный тип вместо `interface{}` (например, []User)
@@ -17,8 +24,113 @@ type SuccessResponse struct {
 }
 
 type ErrorResponse struct {
-	Error string `json:"error"`
+	Error string `json:"error" example:"Описание ошибки"`
 }
+
+type MessageResponse struct {
+	Message string `json:"message" example:"Операция выполнена успешно"`
+}
+
+// GetUsersHandler возвращает список пользователей.
+// @Summary Получение списка пользователей
+// @Description Возвращает список пользователей с информацией о роли, статусе и времени регистрации. Требуется авторизация через Bearer Token.
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Bearer токен" example("Bearer your_token")
+// @Param length query int false "Количество записей для возврата (по умолчанию 10)"
+// @Param start query int false "Смещение записей (по умолчанию 0)"
+// @Success 200 {object} SuccessResponse
+// @Failure 400 {object} ErrorResponse "Некорректные параметры запроса"
+// @Failure 500 {object} ErrorResponse "Ошибка при подсчёте общего числа записей"
+// @Security BearerAuth
+// @Router /api/auth/admin/users [get]
+func (h *Handler) GetUsersHandler(c *gin.Context) {
+	limitStr := c.DefaultQuery("length", "10")
+	offsetStr := c.DefaultQuery("start", "0")
+
+	limit, err := strconv.Atoi(limitStr)
+	if err != nil || limit <= 0 {
+		limit = 10
+	}
+	offset, err := strconv.Atoi(offsetStr)
+	if err != nil || offset < 0 {
+		offset = 0
+	}
+
+	users, totalRecords, err := h.userRepo.GetUsers(limit, offset)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Ошибка при получении пользователей"})
+		return
+	}
+
+	c.JSON(http.StatusOK, SuccessResponse{
+		Data:         users,
+		TotalRecords: totalRecords,
+		Limit:        limit,
+		Offset:       offset,
+	})
+}
+
+// UpdateUserHandler обновляет данные пользователя.
+// @Summary Обновление данных пользователя
+// @Description Обновляет имя и роль пользователя. Требуется авторизация через Bearer Token.
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Bearer токен" example("Bearer your_token")
+// @Param id path string true "ID пользователя"
+// @Param input body UpdateUserRequest true "Данные для обновления пользователя"
+// @Success 200 {object} MessageResponse{message=string}
+// @Failure 400 {object} ErrorResponse "Некорректные данные запроса"
+// @Failure 500 {object} ErrorResponse "Ошибка обновления пользователя"
+// @Security BearerAuth
+// @Router /api/auth/admin/users/{id} [put]
+func (h *Handler) UpdateUserHandler(c *gin.Context) {
+	id := c.Param("id")
+	var input struct {
+		Username string `json:"username"`
+		Role     string `json:"role"`
+	}
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid input"})
+		return
+	}
+
+	err := h.userRepo.UpdateUser(id, input.Username, input.Role)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to update user"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"message": "User updated"})
+}
+
+// DeleteUserHandler удаляет пользователя.
+// @Summary Удаление пользователя
+// @Description Удаляет пользователя по ID. Требуется авторизация через Bearer Token.
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Bearer токен" example("Bearer your_token")
+// @Param id path string true "ID пользователя"
+// @Success 200 {object} MessageResponse{message=string}
+// @Failure 500 {object} ErrorResponse "Ошибка удаления пользователя"
+// @Security BearerAuth
+// @Router /api/auth/admin/users/{id} [delete]
+func (h *Handler) DeleteUserHandler(c *gin.Context) {
+	id := c.Param("id")
+	err := h.userRepo.DeleteUser(id)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to delete user"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"message": "User deleted"})
+}
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+// рабочий код
 
 // GetUsersHandlerDB Получение таблицы пользователей
 // @Summary Получение списка пользователей
@@ -97,7 +209,7 @@ func GetUsersHandlerDB(db *sql.DB) gin.HandlerFunc {
 
 		// Подготавливаем запрос для получения данных пользователей
 		query := `
-			SELECT id, username, email, phone, role, status, password_updated_at, created_at, last_login 
+			SELECT id, username, email, phone, role, status, password_updated_at, created_at, last_login
 			FROM users
 			LIMIT $1 OFFSET $2
 		`
@@ -137,6 +249,21 @@ func GetUsersHandlerDB(db *sql.DB) gin.HandlerFunc {
 				"created_at":          nullTimeToString(createdAt),
 				"last_login":          nullTimeToString(lastLogin),
 			}
+
+			// Расшифровка телефона
+			if phone.Valid && phone.String != "" {
+				key := config.PhoneSecretKey
+				decryptedPhone, err := security.DecryptPhoneNumber(phone.String, key)
+				if err != nil {
+					log.Printf("Ошибка при расшифровке телефона: %v", err)
+					c.JSON(http.StatusInternalServerError, gin.H{"error": "Ошибка при обработке телефона"})
+					return
+				}
+				user["phone"] = decryptedPhone // Сохраняем расшифрованный телефон
+			} else {
+				user["phone"] = nullStringToString(phone) // На случай, если телефон пустой
+			}
+
 			users = append(users, user)
 		}
 
