# v3/routes/routes.go
@@ -4,6 +4,7 @@ package routes
 import (
 	"apiP/v3/handlers"
 	"apiP/v3/middleware"
+	"apiP/v3/repository"
 	"database/sql"
 	"github.com/gin-gonic/gin"
 	"net/http"
@@ -13,7 +14,17 @@ func SetupRouter(router *gin.Engine, db *sql.DB) {
 
 	// TODO перенаправление пользователей без требуемых прав
 
-	admin := router.Group("/api/auth/admin", middleware.AuthMiddleware("admin")) //, middleware.LoggingMiddleware())
+	userRepo := repository.NewUserRepository(db)
+	handler := handlers.NewHandler(userRepo)
+
+	api := router.Group("/api/auth/admin", middleware.AuthMiddleware("admin"))
+	{
+		api.GET("/users", handler.GetUsersHandler)
+		api.PUT("/users/:id", handler.UpdateUserHandler)
+		api.DELETE("/users/:id", handler.DeleteUserHandler)
+	}
+
+	admin := router.Group("/api/auth/admin0", middleware.AuthMiddleware("admin")) //, middleware.LoggingMiddleware())
 	{
 		//admin.GET("/users", handlers.GetUsersHandler(db))
 		admin.GET("/users", handlers.GetUsersHandlerDB(db))
@@ -21,12 +32,15 @@ func SetupRouter(router *gin.Engine, db *sql.DB) {
 		admin.DELETE("/users/:id", handlers.DeleteUserHandler(db))
 	}
 
-	router.POST("/api/auth/register/phone", handlers.RegisterByPhoneHandler(db)) //, middleware.LoggingMiddleware())
-	router.POST("/api/auth/register/emile", handlers.RegisterByEmailHandler(db))
+	router.POST("/api/auth/register/phone", handler.RegisterByPhoneHandler)
+	router.POST("/api/auth/register/emile", handler.RegisterByEmailHandler)
+	//router.POST("/api/auth/register/phone", handlers.RegisterByPhoneHandler(db)) //, middleware.LoggingMiddleware())
+	//router.POST("/api/auth/register/emile", handlers.RegisterByEmailHandler(db))
 
 	router.POST("/api/auth/register", handlers.RegisterHandlerDB(db)) // all
 	router.POST("/api/auth/logout", handlers.LogoutHandler)
-	router.POST("/api/auth/login", handlers.LoginHandlerDB(db), middleware.LoggingMiddleware())
+	router.POST("/api/auth/login", handler.LoginHandler)
+	//router.POST("/api/auth/login", handlers.LoginHandlerDB(db), middleware.LoggingMiddleware())
 
 	router.GET("/api/auth/required-fields", handlers.GetRequiredFieldsHandler())  // Получить текущие обязательные поля
 	router.POST("/api/auth/required-fields", handlers.SetRequiredFieldsHandler()) // Обновить список обязательных полей
